Wed Jan 20 17:01:58 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/query.py: Add support for requesting facets to the Query
	  object: not yet hooked up.

Wed Jan 20 16:56:53 GMT 2010  Richard Boulton <richard@tartarus.org>

	* docs/introduction.rst,xappy/unittests/db_type1.py,
	  xappy/unittests/weight_action.py: Update for new default backend,
	  and availability of brass backend.  (Percentage weights are
	  slightly different with chert, because it stores more statistics
	  which allow tighter bounds.)

Mon Jan 18 16:36:14 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/indexerconnection.py: Change default type for new databases
	  to chert, and add brass as an option.

Fri Jan 15 10:56:33 GMT 2010  Richard Boulton <richard@tartarus.org>

	* external_posting_source/sortdatabase/sortdatabase.cc: Include
	  cstdio to fix warning on pickier new compilers.

Fri Jan 15 10:54:26 GMT 2010  Richard Boulton <richard@tartarus.org>

	* libs/get_xapian.py,utils/make_xappy_tarballs: Update for new
	  version of xapian (main difference is that xapian-compact works
	  with chert in this version).

Mon Jan 04 16:56:05 GMT 2010  Richard Boulton <richard@tartarus.org>

	* xappy/searchresults.py: Fix to stop completely ignoring the
	  results of _reorder_by_clusters().

Wed Dec 30 22:59:51 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/datastructures.py: Add get_terms() method to get the terms
	  in a given field in a ProcessedDocument.

Wed Dec 30 19:26:52 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cache_search_results.py: Fix bug in accessing results
	  directly by index.

Wed Dec 30 19:26:18 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/unittests/cached_searches.py: Check accesses to search
	  results which didn't start with 0.

Wed Dec 30 15:37:32 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/unittests/testdata/chert_db/iamchert: Update chert format.
