@@ -1,3 +1,8 @@
+Thu Jan 21 15:32:06 GMT 2010  Richard Boulton <richard@tartarus.org>
+
+	* xappy/unittests/query_serialise.py: Test that empty queries are
+	  connected when unserialised.
+
 Wed Jan 20 17:01:58 GMT 2010  Richard Boulton <richard@tartarus.org>
 
 	* xappy/query.py: Add support for requesting facets to the Query
